sys/cddl/contrib/opensolaris/uts/common/fs/zfs/zvol.c
@@ -4043,6 +4043,22 @@ name|err
 init|=
 literal|0
 decl_stmt|;
+if|if
+condition|(
+name|MUTEX_HELD
+argument_list|(
+operator|&
+name|spa_namespace_lock
+argument_list|)
+condition|)
+block|{
+comment|/* 		 * If the spa_namespace_lock is being held, it means that ZFS 		 * is trying to open ZVOL as its VDEV. This i not supported. 		 */
+return|return
+operator|(
+name|EOPNOTSUPP
+operator|)
+return|;
+block|}
 name|mutex_enter
 argument_list|(
 operator|&
